--- a/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
+++ b/examples/flutter_view/ios/Runner/Base.lproj/Main.storyboard
@@ -51,8 +51,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jdh-p2-Syc">
-                                <rect key="frame" x="0.0" y="6" width="375" height="667"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jdh-p2-Syc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3K-Ct-amG">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
@@ -237,7 +237,7 @@
             </objects>
             <point key="canvasLocation" x="-1004" y="-213"/>
         </scene>
-        <!--Full Native View Controller-->
+        <!--Title-->
         <scene sceneID="FU5-5C-Psk">
             <objects>
                 <viewController storyboardIdentifier="FullNativeView" id="FuD-Sm-JFt" customClass="FullNativeViewController" sceneMemberID="viewController">
@@ -261,7 +261,7 @@
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jnb-4a-Ntd" customClass="MDButton">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jnb-4a-Ntd">
                                                 <rect key="frame" x="94" y="325.5" width="188" height="38"/>
                                                 <color key="backgroundColor" red="0.88356136658031093" green="0.88356136658031093" blue="0.88356136658031093" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
@@ -281,39 +281,32 @@
                                                     <action selector="switchToFlutterView:" destination="FuD-Sm-JFt" eventType="touchUpInside" id="YwE-BA-snR"/>
                                                 </connections>
                                             </button>
-                                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3pU-XY-D4c">
-                                                <rect key="frame" x="0.0" y="32" width="375" height="44"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                                <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                <items>
-                                                    <navigationItem title="Flutter View" id="QJX-P9-BA4"/>
-                                                </items>
-                                            </navigationBar>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c7M-Pg-nzp">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h5W-xy-pfQ">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flutter View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgn-l2-EVR">
+                                                        <rect key="frame" x="131" y="38" width="112" height="21"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <color key="textColor" red="0.2495344883" green="0.2495344883" blue="0.2495344883" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
                                                 <color key="backgroundColor" red="0.63651635360000003" green="0.63651635360000003" blue="0.63651635360000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flutter View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qA8-dV-9sj">
-                                                <rect key="frame" x="131" y="36" width="113" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <color key="textColor" red="0.35067195600000001" green="0.35067195600000001" blue="0.35067195600000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7nv-ZL-ntt">
-                                                <rect key="frame" x="33" y="23" width="46" height="30"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="&lt;"/>
-                                            </button>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="76" id="TL7-7t-30D"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="jnb-4a-Ntd" firstAttribute="centerX" secondItem="mlo-Fk-35W" secondAttribute="centerX" id="5Ml-xl-i5a"/>
+                                            <constraint firstItem="h5W-xy-pfQ" firstAttribute="leading" secondItem="2tU-yW-uTb" secondAttribute="leading" id="7Z0-98-ilO"/>
+                                            <constraint firstAttribute="trailing" secondItem="h5W-xy-pfQ" secondAttribute="trailing" id="BEH-Yc-i8c"/>
                                             <constraint firstItem="mlo-Fk-35W" firstAttribute="centerY" secondItem="2tU-yW-uTb" secondAttribute="centerY" id="c6r-HP-2F8"/>
                                             <constraint firstItem="jnb-4a-Ntd" firstAttribute="top" secondItem="mlo-Fk-35W" secondAttribute="bottom" constant="16" id="fH2-u2-9Nd"/>
                                             <constraint firstItem="mlo-Fk-35W" firstAttribute="centerX" secondItem="2tU-yW-uTb" secondAttribute="centerX" id="r0q-2V-dyg"/>
+                                            <constraint firstItem="h5W-xy-pfQ" firstAttribute="top" secondItem="2tU-yW-uTb" secondAttribute="top" id="yi7-ef-1es"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" restorationIdentifier="Bottom" translatesAutoresizingMaskIntoConstraints="NO" id="ePS-cE-aTj" userLabel="Bottom">
@@ -326,8 +319,8 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2X-Di-Qqz" customClass="MDButton">
-                                                <rect key="frame" x="303" y="-4" width="55" height="55"/>
-                                                <color key="backgroundColor" red="0.63651635362694303" green="0.63651635362694303" blue="0.63651635362694303" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <rect key="frame" x="303" y="-2" width="55" height="55"/>
+                                                <color key="backgroundColor" red="0.63651635360000003" green="0.63651635360000003" blue="0.63651635360000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="55" id="84K-Ke-pPI"/>
                                                     <constraint firstAttribute="height" constant="55" id="U0t-W6-b2w"/>
@@ -350,7 +343,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="Pbr-oF-8IC" secondAttribute="bottom" constant="20" symbolic="YES" id="ITg-fk-PFN"/>
-                                            <constraint firstAttribute="bottom" secondItem="Q2X-Di-Qqz" secondAttribute="bottom" constant="19" id="ake-po-Eg7"/>
+                                            <constraint firstAttribute="bottom" secondItem="Q2X-Di-Qqz" secondAttribute="bottom" constant="17" id="ake-po-Eg7"/>
                                             <constraint firstAttribute="height" constant="70" id="bMb-Lx-eIQ"/>
                                             <constraint firstAttribute="trailing" secondItem="Q2X-Di-Qqz" secondAttribute="trailing" constant="17" id="vex-no-9U3"/>
                                             <constraint firstItem="Pbr-oF-8IC" firstAttribute="leading" secondItem="ePS-cE-aTj" secondAttribute="leading" constant="20" symbolic="YES" id="yUr-dO-wUR"/>
@@ -367,13 +360,14 @@
                             <constraint firstItem="XxV-J3-arx" firstAttribute="top" secondItem="rWi-Tg-SeV" secondAttribute="top" id="m6A-0u-4Q9"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="Qo1-sC-8Ug"/>
                     <connections>
                         <outlet property="incrementLabel" destination="mlo-Fk-35W" id="Mqj-Jg-Vml"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gPs-4X-uKs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="972" y="-428.63568215892059"/>
+            <point key="canvasLocation" x="971.5" y="-429.5"/>
         </scene>
         <!--Flutter Navigation Controller-->
         <scene sceneID="UIA-E1-Fwi">
